added stuff so that contextualizer outputs nontokens properly, but now it segfaults :(