@@ -2,13 +2,13 @@ CFLAGS=-Wall -pedantic
 COMPILE=g++ -c -g
 LINK=g++
 
-all : Parser
+all : Contextualizer
 
 lex.yy.cpp : tokenizer.l
 	flex -o lex.yy.cpp tokenizer.l
 
-Parser : lex.o main.o token.o context.o globals.h token.h
-	$(LINK) lex.o main.o token.o context.o -o Parser $(CFLAGS)
+Contextualizer : lex.o main.o token.o context.o globals.h token.h
+	$(LINK) lex.o main.o token.o context.o -o Contextualizer $(CFLAGS)
 
 main.o : main.cpp globals.h
 	${COMPILE} main.cpp -o main.o $(CFLAGS)
@@ -22,8 +22,8 @@ token.o : token.cpp globals.h token.h
 context.o : context.cpp context.h
 	$(COMPILE) context.cpp -o context.o $(CFLAGS)
 
-test : Parser
-	./Parser testFile.txt
+test : Contextualizer
+	cat testFile.txt | ./Contextualizer > testFile.context
 
 clean :
-	rm -f *.o lex.yy.c *~ Parser valgrind-results.txt
+	rm -f *.o lex.yy.cpp *~ Contextualizer
